--- a/inputindex.html
+++ b/inputindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Музыкальный плеер</title>
-  <link rel="stylesheet" href="laststyle.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -25,7 +25,7 @@
   </div>
 
   <div id="player" class="hidden">
-    <img id="cover" src="" alt="Обложка" width="200" />
+    <img id="cover" src="" alt="Обложка" />
     <h3 id="title">Название трека</h3>
     <p id="artist">Исполнитель</p>
 
